--- a/public/index.html
+++ b/public/index.html
@@ -45,8 +45,7 @@
       </form>
     </section>
   </main>
-  <section>
-    <section id="tweetcontainer" class="head">
+    <!-- <section id="tweetcontainer" class="head">
       <article class='tweet'>
         <div class="article-header"></div>
         <div>
@@ -69,8 +68,8 @@
           </div>
         </footer>
       </article>
-    </section>
-    </head>
+    </section> -->
+
     <!-- External JS -->
     <script type="text/javascript" src="./vendor/jquery-2.2.3.min.js"></script>
     <!-- App JS -->
