--- a/public/index.html
+++ b/public/index.html
@@ -40,36 +40,11 @@
     <section id="container" class="new-tweet">
       <form action="/tweets/" method="POST">
         <textarea class="text" name="text" placeholder="What are you humming about?"></textarea>
-        <div><input class="button" type="submit" value="Tweet"></div>
-        <span class="counter">140</span>
+        <div><input class="button" type="submit" value="Tweet">
+        <span class="counter">140</span></div>
       </form>
     </section>
   </main>
-    <!-- <section id="tweetcontainer" class="head">
-      <article class='tweet'>
-        <div class="article-header"></div>
-        <div>
-          <img src="https://i.imgur.com/73hZDYK.png(5(5 kB)
-     https://i.imgur.com/73hZDYK.png(5
-     kB)
-     https://i.imgur.com/73hZDYK.png(5 kB)
-     https://i.imgur.com/73hZDYK.png
-     ">
-          <h5 class="tweet-name">Newton</h5>
-          <h3 class="tweet-name-right">@Sirsac</h3>
-        </div>
-        <div class="texttweet">If i have seen further it is by standing on the shoulders of gaints</div><br />
-        <footer class="article-footer">
-          <span class="tweet-time">10 days ago</span>
-          <div class="tweet-icons">
-            <i class="fas fa-flag"></i>
-            <i class="fas fa-retweet"></i>
-            <i class="fas fa-heart"></i>
-          </div>
-        </footer>
-      </article>
-    </section> -->
-
     <!-- External JS -->
     <script type="text/javascript" src="./vendor/jquery-2.2.3.min.js"></script>
     <!-- App JS -->
