--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
     <section id="container" class="new-tweet">
       <form action="/tweets/" method="POST">
         <textarea class="text" name="text" placeholder="What are you humming about?"></textarea>
-        <div><input class="button" type="submit" value="Tweet">
+        <div><input id="button" class="button" type="submit" value="Tweet">
         <span class="counter">140</span></div>
       </form>
     </section>
