--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,7 @@
         <span class="counter">140</span></div>
       </form>
     </section>
+    <section id="tweetcontainer" class="head"></section>
   </main>
     <!-- External JS -->
     <script type="text/javascript" src="./vendor/jquery-2.2.3.min.js"></script>
@@ -52,5 +53,4 @@
     <!--composer-char-counter-->
     <script src="./scripts/composer-char-counter.js"></script>
 </body>
-
 </html>
