--- a/public/index.html
+++ b/public/index.html
@@ -10,25 +10,21 @@
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700,700i&display=swap"
     rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Bungee&display=swap" rel="stylesheet">
-  <!--tweet-element-css-->
+  <!--internal-css-->
   <link rel="stylesheet" href="./styles/tweet-element.css">
-  <!--new-tweet-css-->
   <link rel="stylesheet" href="./styles/new-tweet.css" />
-  <!-- logo css-->
   <link rel="stylesheet" href="./styles/nav.css" />
-  <!-- App CSS -->
   <link rel="stylesheet" href="./styles/layout.css" type="text/css" />
-  <!--Header CSS-->
   <link rel="stylesheet" href="./styles/header.css" type="text/css" />
 </head>
-
 <body>
   <!-- Top nav bar (fixed) -->
   <nav class="navbar">
     <span class="navbar-logo">tweeter</span>
-    <span class="newTweet"> <strong>Write </strong>a new tweet<span 
-    id = "click" class="arrow bounce"><i class="fas fa-angle-double-down"></i></span></span>
+    <span class="newTweet"> <strong>Write </strong>a new tweet<span id="click" class="arrow bounce"><i
+          class="fas fa-angle-double-down"></i></span></span>
   </nav>
+  <!--Header stuff-->
   <header class="header">
     <div>
       <img src="/images/arabic.png">
@@ -37,26 +33,29 @@
   </header>
   <!-- Page-specific (main) content here -->
   <main>
-      <div class="alert">
-         <h2 class = "error1">&#9888 NO TEXT TO TWEET! &#9888 </h2>
-        </div>
-        <div class="alerte">
-         <h2 class = "error2">&#9888  CHARACTER SIZE EXCEEDED! &#9888 </h2>
-        </div>
+    <div class="alert">
+      <span id= "closebtn" class="closebtn">X</span> 
+      <h2 class="error1">&#9888 NO TEXT TO TWEET! &#9888 </h2>
+    </div>
+    <div class="alerte">
+      <span id= "closebtn2" class="closebtn">X</span> 
+      <h2 class="error2">&#9888 CHARACTER SIZE EXCEEDED! &#9888 </h2>
+    </div>
     <section id="container" class="new-tweet">
       <form action="/tweets/" method="POST">
         <textarea class="text" name="text" placeholder="What are you humming about?"></textarea>
         <div><input id="button" class="button" type="submit" value="Tweet">
-        <span class="counter">140</span></div>
+          <span class="counter">140</span></div>
       </form>
     </section>
     <section id="tweetcontainer" class="head"></section>
   </main>
-    <!-- External JS -->
-    <script type="text/javascript" src="./vendor/jquery-2.2.3.min.js"></script>
-    <!-- App JS -->
-    <script type="text/javascript" src="./scripts/client.js"></script>
-    <!--composer-char-counter-->
-    <script src="./scripts/composer-char-counter.js"></script>
+  <!-- External JS -->
+  <script type="text/javascript" src="./vendor/jquery-2.2.3.min.js"></script>
+  <!-- App JS -->
+  <script type="text/javascript" src="./scripts/client.js"></script>
+  <!--composer-char-counter-->
+  <script src="./scripts/composer-char-counter.js"></script>
 </body>
+
 </html>
