--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,7 @@
       </form>
     </section>
     <section id="tweetcontainer" class="head"></section>
+  </form>
   </main>
   <!-- External JS -->
   <script type="text/javascript" src="./vendor/jquery-2.2.3.min.js"></script>
